<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="download_success" translatable="true">File downloaded successfully</string>
    <string name="download_notification_channel_name" translatable="true">Download</string>
    <string name="download_channel_description">Downloaded files</string>
    <string name="download_failure" translatable="true">Error downloading the file</string>
    <string name="notification_button">Details</string>
    <string name="success">Success</string>
    <string name="fail">Failure</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="repo">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and java by Square, Inc</string>
    <string name="loading_btn">A button to request the download and represent the progress</string>
    <string name="loading">Loading…</string>
    <string name="download">Download</string>
    <string name="fab_description">Returns to the main activity</string>
    <string name="file_name_label">File name:</string>
    <string name="status_label">Status:</string>
    <string name="swipe_up">Swipe Up</string>
    <string name="download_img">Cloud download image to describe the sole purpose of the app</string>
</resources>
